refactor(java8): Java 9+ API 下沉（集合工厂/Stream.toList/Files/Optional/Objects/Path）
- 新增 rip/ysm/util/YsmCollections：immutableListOf/immutableSetOf/immutableMapOf
  包装 Collections.unmodifiableXxx（Set 用 LinkedHashSet 保插入序），替代
  List.of/Map.of/Set.of（Java 9）；空集合调用点直接换 Collections.emptyXxx
  共享单例（零分配，热路径优于提升常量）。
- 新增 rip/ysm/util/YsmStrings.isBlank：无分配 char 循环（禁 trim().isEmpty
  分配版），替代 Java 11 String.isBlank 的统一入口（现存调用点为 0，备用）。
- Stream.toList()（Java 16）→ collect(Collectors.toCollection(ArrayList::new))；
  含存量 Collectors.toList() 一并换形，保证 .toList() 文本门禁零命中。
- Files.readString/writeString（Java 11）→ readAllBytes/getBytes + Files.write。
- Optional.ifPresentOrElse（Java 9）→ isPresent/else 显式分支（5 处）。
- Objects.requireNonNullElse/Get（Java 9）→ 三元/null 检查（8 处，惰性求值保留）。
- Path.of（Java 11）→ Paths.get（NativeLibLoader 6 处）。
- 匿名类菱形 <>（Java 9）→ 显式类型实参（3 处）。
- List.getFirst（Java 21 误配点修正为 fastutil Pair getFirst 原语义）。

语义不变：所有改写保持求值次数/异常面/返回类型一致，1.20.1 build 绿。
Task: m2-java8-downshift

Signed-off-by: brokestar233 <3765589194@qq.com>