@@ -17,6 +17,7 @@ import java.io.InputStream;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 
 public final class NativeLibLoader {
@@ -26,11 +27,11 @@ public final class NativeLibLoader {
     private static ErrorState lastError = null;
 
     private enum TargetPlatform {
-        WINDOWS_X64("windows-x64", "ysm-core.dll", Path.of(System.getProperty("java.io.tmpdir"), "ysm")),
-        WINDOWS_X86("windows-x86", "ysm-core.dll", Path.of(System.getProperty("java.io.tmpdir"), "ysm")),
-        LINUX_X64("linux-x64", "libysm-core.so", Path.of(System.getProperty("user.home"), ".ysm")),
-        MACOS_X64("macos-x64", "libysm-core.dylib", Path.of(System.getProperty("user.home"), ".ysm")),
-        MACOS_ARM64("macos-arm64", "libysm-core.dylib", Path.of(System.getProperty("user.home"), ".ysm")),
+        WINDOWS_X64("windows-x64", "ysm-core.dll", Paths.get(System.getProperty("java.io.tmpdir"), "ysm")),
+        WINDOWS_X86("windows-x86", "ysm-core.dll", Paths.get(System.getProperty("java.io.tmpdir"), "ysm")),
+        LINUX_X64("linux-x64", "libysm-core.so", Paths.get(System.getProperty("user.home"), ".ysm")),
+        MACOS_X64("macos-x64", "libysm-core.dylib", Paths.get(System.getProperty("user.home"), ".ysm")),
+        MACOS_ARM64("macos-arm64", "libysm-core.dylib", Paths.get(System.getProperty("user.home"), ".ysm")),
         ANDROID_ARM64("android-arm64", "libysm-core.so", null);
 
         final String resDir;
@@ -77,7 +78,7 @@ public final class NativeLibLoader {
                 return null;
             }
             isAndroid = true;
-            storageDir = Path.of(androidRuntime);
+            storageDir = Paths.get(androidRuntime);
         }
 
         byte[] data = readResource(platform.getResourcePath());
