@@ -373,7 +373,7 @@ public class ClientModelManager {
         if (!cacheDir.exists()) cacheDir.mkdirs();
 
         boolean useLocalModelCatalog = Minecraft.getInstance().isLocalServer() && isLazyModelLoadingEnabled();
-        Map<UUID, File> localCacheMap = useLocalModelCatalog ? Map.of() : YSMClientCache.buildCacheIndex(cacheDir, clientKey);
+        Map<UUID, File> localCacheMap = useLocalModelCatalog ? Collections.emptyMap() : YSMClientCache.buildCacheIndex(cacheDir, clientKey);
         List<ModelHash> modelsToRequest = new ArrayList<>();
 
         int unkSize = buf.readVarInt();
@@ -1365,7 +1365,7 @@ public class ClientModelManager {
         private final ModelResourceBundle metadataResources;
 
         private LazyModelAssembly(String modelId, LazyModelSource source) {
-            super(null, Map.of(), Map.of(), createLazyResourceBundle(source.modelInfo()), source.modelInfo(), new ModelDisplayAssets(source.modelInfo().getModelProperties().getDefaultTexture(), source.isAuth(), Map.of(), Map.of()), List.of());
+            super(null, Collections.emptyMap(), Collections.emptyMap(), createLazyResourceBundle(source.modelInfo()), source.modelInfo(), new ModelDisplayAssets(source.modelInfo().getModelProperties().getDefaultTexture(), source.isAuth(), Collections.emptyMap(), Collections.emptyMap()), Collections.emptyList());
             this.modelId = modelId;
             this.modelInfo = source.modelInfo();
             this.displayAssets = super.getTextureRegistry();
@@ -1373,7 +1373,7 @@ public class ClientModelManager {
         }
 
         private static ModelResourceBundle createLazyResourceBundle(ServerModelInfo modelInfo) {
-            return new ModelResourceBundle(Map.of(), new Object2ReferenceOpenHashMap<>(), new Object2ReferenceOpenHashMap<>(), modelInfo.getTranslations());
+            return new ModelResourceBundle(Collections.emptyMap(), new Object2ReferenceOpenHashMap<>(), new Object2ReferenceOpenHashMap<>(), modelInfo.getTranslations());
         }
 
         private ModelAssembly loadedAssembly() {
@@ -1404,14 +1404,14 @@ public class ClientModelManager {
         public Map<ResourceLocation, ProjectileModelBundle> getProjectileModels() {
             requestLazyModel(modelId);
             ModelAssembly assembly = loadedAssembly();
-            return assembly == null ? Map.of() : assembly.getProjectileModels();
+            return assembly == null ? Collections.emptyMap() : assembly.getProjectileModels();
         }
 
         @Override
         public Map<ResourceLocation, VehicleModelBundle> getVehicleModels() {
             requestLazyModel(modelId);
             ModelAssembly assembly = loadedAssembly();
-            return assembly == null ? Map.of() : assembly.getVehicleModels();
+            return assembly == null ? Collections.emptyMap() : assembly.getVehicleModels();
         }
 
         @Override
@@ -1429,7 +1429,7 @@ public class ClientModelManager {
         @Override
         public List<AbstractTexture> getTextures() {
             ModelAssembly assembly = loadedAssembly();
-            return assembly == null ? List.of() : assembly.getTextures();
+            return assembly == null ? Collections.emptyList() : assembly.getTextures();
         }
     }
 
